# mb-exec

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  build.gradle.kts  repo.yaml  settings.gradle.kts
core/: .classpath  .project  SConscript  TODO
org.metaborg.meta.stratego.semantics/: .classpath  .gitignore  .project  StrategoInterpreterMain.launch  TestTests1.launch  build.stratego.xml  pom.xml
org.metaborg.util/: .gitignore  .project  build.gradle.kts  pom.xml
org.spoofax.compiler/: .classpath  .project  build.xml  ivy.xml  jstrc  version.properties
org.spoofax.ecjadapter/: .project  deconstructor.rtree  ecj-shell  run
org.spoofax.interpreter-feature/: .project  feature.xml
org.spoofax.interpreter.adapter.asm/: .classpath  .project  build.ant.xml  build.properties  build.xml  ivy.xml  version.properties
org.spoofax.interpreter.adapter.ecj/: .classpath  .project  AUTHORS  LICENSE  Makefile  build.ant.xml  build.ivy.xml  build.properties  ecj-parse-java  ecj-shell  fetch.sh  ivy.xml  ivysettings.xml  plugin.xml  pom.xml  version.properties  y.trm  yp.trm  zp.trm
org.spoofax.interpreter.adapter.ecj-feature/: .project  feature.xml
org.spoofax.interpreter.adapters/: .classpath  .project
org.spoofax.interpreter.core/: .project  INSTALL  README  TODO  build.ant.xml  build.gradle.kts  build.ivy.xml  ivy.xml  pom.xml  spoofax  spoofax-prof  version.properties
org.spoofax.interpreter.core-feature/: .project  feature.xml
org.spoofax.interpreter.demo/: .classpath  .project  plugin.xml
org.spoofax.interpreter.library.eclipse/: .project  build.ant.xml  build.properties  pom.xml
org.spoofax.interpreter.library.interpreter/: .gitignore  .project  build.ant.xml  build.properties  pom.xml
org.spoofax.interpreter.library.java/: .classpath  .project  build.ant.xml  build.gradle.kts  build.properties  pom.xml
org.spoofax.interpreter.library.jline/: .classpath  .gitignore  .project  (+2 more)
xlet/: .classpath  .gitignore  .project  Makefile.am  bootstrap  configure.ac
xlet/.externalToolBuilders/: New_Builder.launch  make.launch
xlet/src/: Makefile.am  spoofax.str
xlet/src/implode/: Makefile.am  imploder.str  pretty-print.str
xlet/src/spoofax/: actions.str  aterm.str  core.str  ext-list.str  ext-string.str  interpreter.str  path.str  spoofax.str  weave.str  xlet.str
xlet/src/spoofax/core/: aterm.str  common.str  ext-list.str  ext-string.str  interpreter.str  path.str
xlet/src/spoofax/editor/: actions.str  weave.str
xlet/src/spoofax/transformlet/: Transformlet.str  common.str  plugin.str
xlet/src/spoofax/ui/: windows.str
xlet/src/tools/: Makefile.am  xlet-make.str
xlet/src/xlets/: Makefile.am  actions.str  analyzer.str  content-assist.str  outliner.str
(+2511 files in other folders)
